# algo-fuzz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
algos/: example_max.cpp
tests/: example_max.cpp
